2010-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: (ssl-copy-sid) new setting; added
	  recognition of "too many users" condition in Transient5XX method;
	  more const on methods; shutdown ssl properly after CCC command.
	* resource.cc: (ftp:ssl-copy-sid) new setting; update RETRY_530 list.
	* Torrent.cc, Torrent.h: add black_list; refuse to start the same
	  torrent twice.

2010-02-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, network.cc, network.h: more const.
	* misc.h: (ListScanPtr) new macro.

2010-01-27  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc: resume transfer at the end when there is not status file
	  (fixes re-downloading of complete files and allows resuming of plain
	  transfers with pget).

2010-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: more restrictions on suggested file name.
	* FileCopy.cc: use suggested file name only if no such file exists.
	* GetJob.cc, FileCopy.cc: use O_EXCL when xfer:clobber is no.

2009-12-21  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc, pgetJob.h: add PrepareToDie method (fixes a core dump
	  on "kill all").
	* HttpDir.cc: don't use strlcpy.
	* Torrent.cc, Torrent.h: fix a warning on x86_64; when shutting down,
	  terminate immediately on a new signal.

2009-12-18  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc: use xrealloc.
	* misc.cc: (dir_file) use xstring::get_tmp (fixes sftp rename).
	* HttpDir.cc: add parser for lightttpd listing.

2009-11-17  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc, lftp_rl.c, lftp_rl.h: new setting cmd:stifle-rl-history.

2009-11-17  Robert Story <Robert.Story@cobham.com>

	* Resolver.cc: use VAL_GETADDRINFO_HAS_STATUS macro.

2009-10-30  Robert Story <Robert.Story@cobham.com>

	* Resolver.cc: validate "no such name" answers.

2009-10-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc, Resolver.h: use default dnssec context; cosmetics.
